# ByteSequence

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MAINTAINING.md  Makefile  README.de.md  README.md
Batch/: clearIconCache.bat  endlesTestProc.bat  gitAmendCommit.sh  gitCommitRec.sh  installDependencies.bat  installDependenciesAsAdmin.bat  installDependenciesAsUser.bat  openVSCode.bat  testProc.bat
CMake/: AggressiveInterfaceOptimizations.cmake  provideLibrarys.cmake
src/ByteSequence/: ByteSequence.h
thirdPartyLicenses/: imgui-filebrowser.LICENSE  raylib.LICENSE  rlImGui.LICENSE
